# ML_model_ESP32-LyraT-mini_V1.2

./: .gitignore  CMakeLists.txt  ML_voice.txt  README.md  Voice-Controlled Music Playback.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/edge_impulse/: CMakeLists.txt  README.txt
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_1057563_3_compiled.cpp  tflite_learn_1057563_3_compiled.h  trained_model_ops_define.h
components/json/: CMakeLists.txt  cJSON.h
main/: CMakeLists.txt  ML_voice.c  audio_clip.h  ei_classifier_bridge.cpp  ei_classifier_bridge.h  idf_component.yml  speaker_codec.c  speaker_codec.h
tools/: capture_to_wav.py  serial_capture_listener.py  watch_serial.py  watch_spread.py
